--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,12 +5,11 @@
 ul{
     padding : 0;
     margin: 0;
+    li{
+        list-style: none;
+    }
 }
 
-li{
-    list-style: none;
-}
-
-img{
+.hide-img{
     display:none
 }
