--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -81,5 +81,19 @@ index
 
 }
 
+#index-weather{
+    padding: 32px 16px;
 
+    h1{
+        color: var(--blue);
+    }
+    h2{
+        color: var(--aqua);
+        margin-bottom: 8px;
+    }
+    p{
+        margin-bottom: 24px;
+
+    }
+}
 
