--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -9,6 +9,10 @@ index
     >div{
         padding: 0 16px;
 
+        @include md{
+            padding: 0 56px;
+        }
+
         p{
             font-size: rem-calc(18);
             color: var(--blue);
@@ -17,19 +21,24 @@ index
 
         button{
             margin: 32px 0;
-        }s
+        }
     }
     img{
-        width:100%
+        width:100%;
     }
     #index-hero-image{
         border: 1px solid red;
-        height: 500px;
+        height: 90vh;
         background-image: url('..//Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/hero.jpg');
         background-size: cover;
         //x can equal right center left 
         //y can equal top center bottom
         background-position: center;
+    
+        @include md{
+            height: 500px;
+        }
+    
     }
 }
 
@@ -49,6 +58,13 @@ index
     p{
         margin-bottom: 32px;
         text-align: left;
+
+        @include md{
+            padding-right: 30vw;
+
+            font-size: rem-calc(20);
+            line-height: 25px;
+        }
     }
 
     #planning-hero{
@@ -57,6 +73,12 @@ index
         background-size: cover;
         background-position: center;
         border-radius: 10px;
+
+        @include md{
+            width: 80vw;
+            height: 50vh;
+        }
+
     }
 
     #planning-callout{
@@ -68,6 +90,10 @@ index
         width: 244px;
 
         margin-top: -20px;
+
+        @include md{
+
+        }
 
         display: inline-block;
 
@@ -96,6 +122,10 @@ index
 
 #index-weather{
     padding: 32px 16px;
+
+    @include md{
+        padding: 32px 15vw;
+    }
 
     h1{
         color: var(--blue);
